과제 업데이트

--- a/about.html
+++ b/about.html
@@ -41,9 +41,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
                             <h1>About Me</h1>
-                            <span class="subheading">어쩌라고</span>
-=======
-                            <span class="subheading">나는 조혜진이다</span>
+                            <span class="subheading">잡다한 과제 모음</span>
                         </div>
                     </div>
                 </div>
@@ -54,18 +52,12 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>나는 조혜진이고 포항제철고등학교를 진학중이야</p>
-                        <a href="#!"><img class="img-fluid" src="assets/img/bangyari.jpg" alt="..." /></a>
-                        <span class="caption text-muted">1학년때 만들었던 nft(와!)</span>
-                        <p>당연히 별로 궁금하지않겠지</p>
-                        <a href="#!"><img class="img-fluid" src="assets/img/bangrangja.jpg" alt="..." /></a>
-                        <p>예슬이가 뽑고싶어하는 방랑자 난 가지고 있지</p>
-                        <a href="#!"><img class="img-fluid" src="assets/img/tlfkdltldks.jpg" alt="..." /></a>
-                        <p>민서가 뽑고싶어하는 웨딩 안 난 가지고 있지</p>
-                        <p>재미있는 애니</p>
-                        <p>오란고교 사교클럽, 이누야사, 마법소녀 마도카 마기카</p>
-                        <p>당연히 별로 궁금하지않겠지</p>
-                        <p>지금 이건 그냥 테스트일 뿐이야 아무런 의미없어</p>
+                        <a><img class="img-fluid" src="assets/img/bangyari.jpg" alt="..." /></a>
+                        <span class="caption text-muted">1학년때 제작한 nft</span>
+                        <p></p>
+                        <a href="bezier1.html">베지어 곡선 시물레이션 페이지(클릭시 이동)</a>
+                        <p></p>
+                        <a href="doff.html">도플러 효과 시물레이션 페이지(클릭시 이동)</a>
                     </div>
                 </div>
             </div>
@@ -76,30 +68,6 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <ul class="list-inline text-center">
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
                         </ul>
                         <div class="small text-center text-muted fst-italic">Copyright &copy; 조혜진</div>
                     </div>
