--- a/doff.html
+++ b/doff.html
@@ -60,8 +60,8 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <div class="page-heading">
-                        <h1>About Me</h1>
-                        <span class="subheading">도플러효과 시뮬레이션</span>
+                        <h1>도플러효과 시뮬레이션</h1>
+                        <span class="subheading">도플러효과 체험</span>
                     </div>
                 </div>
             </div>
