게임추가, 카피라이트 제거

--- a/about.html
+++ b/about.html
@@ -58,6 +58,8 @@
                         <a href="bezier1.html">베지어 곡선 시물레이션 페이지(클릭시 이동)</a>
                         <p></p>
                         <a href="doff.html">도플러 효과 시물레이션 페이지(클릭시 이동)</a>
+                        <p></p>
+                        <a href="game.html">벽돌깨기 게임(클릭시 이동)</a>
                     </div>
                 </div>
             </div>
@@ -69,7 +71,6 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <ul class="list-inline text-center">
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; 조혜진</div>
                     </div>
                 </div>
             </div>
