타이틀 변경

--- a/post.html
+++ b/post.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>내 블로그 - 조혜진</title>
+    <title>20725조혜진 웹사이트 제작</title>
     <style>
         body {
             margin: 0;
