--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>내 블로그 - 테마 따윈 없다</title>
+        <title>20725조혜진 웹사이트 제작</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -40,8 +40,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>내 블로그</h1>
-                            <span class="subheading">테마 없다고;;</span>
+                            <h1>웹사이트 제작</h1>
+                            <span class="subheading">새폴더 20725조혜진</span>
                         </div>
                     </div>
                 </div>
