--- a/post.html
+++ b/post.html
@@ -112,7 +112,7 @@
                         <input type="text" id="title" placeholder="제목" required>
                         <textarea id="content" placeholder="내용을 입력하세요" required></textarea>
                         <input type="file" id="imageInput" accept="image/*">
-                        <button type="submit">글 올리기</button>
+                        <button class="btn btn-primary text-uppercase disabled" type="submit">글올리기</button>
                     </form>
                     <div id="posts"></div>
                 </div>
