--- a/bezier1.html
+++ b/bezier1.html
@@ -56,7 +56,7 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <!-- 베지어 곡선 시뮬레이션 -->
-                    <a href="bezier2.html"><button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <a href="bezier2.html"><button class="btn btn-primary text-uppercase" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         두번째 페이지로 가기
                     </button></a>
                     <p></p>
