--- a/bezier2.html
+++ b/bezier2.html
@@ -142,7 +142,7 @@
                             </script>
     
                             <!-- 처음으로 가기 버튼 -->
-                            <a href="bezier1.html"><button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                            <a href="bezier1.html"><button class="btn btn-primary text-uppercase" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                                 첫번째 페이지로 가기
                             </button></a>
                         </div>
@@ -155,6 +155,8 @@
                 <div class="container px-4 px-lg-5">
                     <div class="row gx-4 gx-lg-5 justify-content-center">
                         <div class="col-md-10 col-lg-8 col-xl-7">
+                            <ul class="list-inline text-center">
+                            </ul>
                         </div>
                     </div>
                 </div>
