--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
                             <h1>About Me</h1>
-                            <span class="subheading">잡다한 과제 모음</span>
+                            <span class="subheading">1년동안 제작한 html페이지들</span>
                         </div>
                     </div>
                 </div>
