--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <a><img class="img-fluid" src="assets/img/bangyari.jpg" alt="..." /></a>
-                        <span class="caption text-muted">1학년때 제작한 nft</span>
+                        <span class="caption text-muted">제작한 nft</span>
                         <p></p>
                         <a href="bezier1.html">베지어 곡선 시물레이션 페이지(클릭시 이동)</a>
                         <p></p>
