--- a/game.html
+++ b/game.html
@@ -35,7 +35,7 @@
 </div>
 
 <script src="game.js"></script>
-<a href="about.html"><button>이전으로</button></a>
+<a href="about.html"><button class="btn btn-primary text-uppercase" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">이전으로</button></a>
 </body>
 </html>
 
